--- a/homeWorks/tarea4/personal-web-page/index.html
+++ b/homeWorks/tarea4/personal-web-page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuel Rosario</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/homeWorks/tarea4/personal-web-page/css/styles.css">
 </head>
 <body>
     <header>
@@ -12,9 +12,9 @@
             {/}
         </h2>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About me</a>
-            <a href="#hobbies">Hobbies</a>
+            <a href="#home">Inicio</a>
+            <a href="#about">Sobre mi</a>
+            <a href="#hobbies">Pasatiempos</a>
         </nav>
     </header>
     <main>
@@ -46,16 +46,19 @@
                     </a>
                 </article>
             </article>
-            <img src="/homeWorks/tarea4/personal-web-page/resources/images/hero-photo.jpg" alt="">
+            <article class="hero-img">
+                <img src="/homeWorks/tarea4/personal-web-page/resources/images/hero-photo.jpg" alt="">
+            </article>
         </section>
 
         <section id="about">
             <img src="/homeWorks/tarea4/personal-web-page/resources/images/photo-about.jpg" alt="">
             <article class="about-info">
-                <h2>About me</h2>
+                <h2>Sobre mi</h2>
                 <p>Mi nombre es Manuel Rosario, nacido y criado en Santo Domingo. Me considero una persona autodidacta. Soy introvertido y sociable a la vez. Tengo unos 3 años empapándome de lo que es desarrollo web pero no es hasta este año que realmente aprendo a realizar mini proyectos por mi cuenta. Y mi plan es convertirme en un Frontend Developer. 
                 </p>
                 <p>"Soy un libro todavia conociendome" - TYS</p>
+                <a href="/homeWorks/tarea4/personal-web-page/about.html" class="btn">Conocer mas</a>
             </article>
         </section>
 
@@ -81,7 +84,7 @@
         </section>
 
         <section id="hobbies">
-            <h2>Hobbies</h2>
+            <h2>Pasatiempos</h2>
 
             <section class="hobbies-cards">
                 <article class="hobbies-card">
@@ -97,6 +100,8 @@
                     <p>Escuchar musica</p>
                 </article>
             </section>
+
+            <a href="/homeWorks/tarea4/personal-web-page/hobbies.html" class="btn">Conocer mas</a>
             
         </section>
 
