Cambios desde la mac

--- a/homeWorks/tarea5/personal-web-page-2.0/index.html
+++ b/homeWorks/tarea5/personal-web-page-2.0/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuel Rosario</title>
-    <link rel="stylesheet" href="/homeWorks/tarea4/personal-web-page/css/styles.css">
+    <link rel="stylesheet" href="/homeWorks/tarea5/personal-web-page-2.0/styles.css">
 </head>
 <body>
     <header>
@@ -58,6 +58,7 @@
                 <p>Mi nombre es Manuel Rosario, nacido y criado en Santo Domingo. Me considero una persona autodidacta. Soy introvertido y sociable a la vez. Tengo unos 3 años empapándome de lo que es desarrollo web pero no es hasta este año que realmente aprendo a realizar mini proyectos por mi cuenta. Y mi plan es convertirme en un Frontend Developer. 
                 </p>
                 <p>"Soy un libro todavia conociendome" - TYS</p>
+                <a href="/homeWorks/tarea5/personal-web-page-2.0/about.html" class="btn">Conocer mas</a>
             </article>
         </section>
 
@@ -99,7 +100,9 @@
                     <p>Escuchar musica</p>
                 </article>
             </section>
-                 
+
+            <a href="/homeWorks/tarea5/personal-web-page-2.0/hobbies.html" class="btn">Conocer mas</a>
+            
         </section>
 
     </main>
