--- a/homeWorks/tarea5/personal-web-page-2.0/about.html
+++ b/homeWorks/tarea5/personal-web-page-2.0/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mi</title>
-    <link rel="stylesheet" href="/homeWorks/tarea4/personal-web-page/css/about.css">
+    <link rel="stylesheet" href="/homeWorks/tarea5/personal-web-page-2.0/about.css">
 </head>
 <body>
     <header>
