Agregue fotos la pagina de pasatiempos

--- a/homeWorks/tarea5/personal-page/pasatiempos.html
+++ b/homeWorks/tarea5/personal-page/pasatiempos.html
@@ -22,26 +22,44 @@
 
         <section class="cards">
             <article class="card">
+                <div class="card-img">
+                    <img src="../personal-page/imgs/listen-music.jpg" alt="">
+                </div>
                 <h3>Escuchar música</h3>
                 <p>Disfruto géneros como lo-fi, rock alternativo y jazz suave para concentrarme o relajarme.</p>
             </article>
             <article class="card">
+                <div class="card-img">
+                    <img src="../personal-page/imgs/read-books.jpg" alt="">
+                </div>
                 <h3>Leer libros</h3>
                 <p>Me apasiona la lectura de desarrollo personal, ciencia ficción y tecnología.</p>
             </article>
             <article class="card">
+                <div class="card-img">
+                    <img src="../personal-page/imgs/play-videogames.jpg" alt="">
+                </div>
                 <h3>Jugar videojuegos</h3>
                 <p>Juego títulos de estrategia y aventura como The Legend of Zelda y Civilization VI.</p>
             </article>
             <article class="card">
+                <div class="card-img">
+                    <img src="../personal-page/imgs/gym.jpg" alt="">
+                </div>
                 <h3>Hacer ejercicio</h3>
                 <p>Entreno en el gimnasio con regularidad para mantenerme en forma y con energía.</p>
             </article>
             <article class="card">
+                <div class="card-img">
+                    <img src="../personal-page/imgs/new-technology.jpg" alt="">
+                </div>
                 <h3>Explorar nuevas tecnologías</h3>
                 <p>Siempre estoy probando nuevos frameworks o herramientas relacionadas con desarrollo web.</p>
             </article>
             <article class="card">
+                <div class="card-img">
+                    <img src="../personal-page/imgs/movies.jpg" alt="">
+                </div>
                 <h3>Ver documentales y películas</h3>
                 <p>Prefiero los que tratan sobre ciencia, historia y cultura general.</p>
             </article>
