--- a/tarea7/index.html
+++ b/tarea7/index.html
@@ -9,18 +9,21 @@
 <body>
     <main>
         <header>
-            <h2 class="fecha"></h2>
-            <section class="btn-agregar">
-                <svg width="24" height="24"><use href="assets/sprite.svg#icon-plus"/></svg>
-            </section>
-            <section class="input">
-                <input type="text" placeholder="Add a task">
-                <span class="cancelar">
+            <h1>TO DO LIST</h1>
+            <section class="header-info">
+                <h2 class="fecha"></h2>
+                <section class="btn-agregar">
                     <svg width="24" height="24"><use href="assets/sprite.svg#icon-plus"/></svg>
-                </span>
-                <span class="check-agregar">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"/></svg>
-                </span>
+                </section>
+                <section class="input">
+                    <input type="text" placeholder="Add a task">
+                    <span class="cancelar">
+                        <svg width="24" height="24"><use href="assets/sprite.svg#icon-plus"/></svg>
+                    </span>
+                    <span class="check-agregar">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"/></svg>
+                    </span>
+                </section>
             </section>
         </header>
         <p class="warning hidden">Please enter a task</p>
