Tarea8 con algunos cambios

--- a/homeWorks/tarea8/index.html
+++ b/homeWorks/tarea8/index.html
@@ -69,6 +69,20 @@
                 </article>
             </section>
         </section>
+
+        <h3>Forecast</h3>
+
+        <section class="forecast">
+        </section>
+
+        <!-- <section class="favorite">
+            <article class="favorite-weather"></article>
+            <article class="favorite-weather"></article>
+            <article class="favorite-weather"></article>
+            <article class="favorite-weather"></article>
+            <article class="favorite-weather"></article>
+        </section> -->
+
     </main>
     <script src="js/script.js"></script>
 </body>
